--- a/lang/lang_pt.txt
+++ b/lang/lang_pt.txt
@@ -3,9 +3,9 @@
 	, "subtitle1": "Engenheiro de Computação. Mestre em Informática. Especialista em Engenharia de Produção."
 	, "subtitle2": "Acredito que construir novas coisas é muito mais divertido que comprá-las. E que soluções simples e leves podem produzir grandes inovações."
 	, "about_title": "Sobre"	
-	, "about_content1": "Sou desenvolvedor full stack desde 2006 para ambientes web e desktop. Trabalhei com grandes e importantes projetos nas áreas de contabilidade, de educação e finanças. As linguagens no qual tenho maior experiência são ASP.NET C#, PHP e Java, para banco de dados relacionais. "
-	, "about_content2": "Tenho formação acadêmica em Engenharia de Computação (CEFET-MG 2012), com especialização em Engenharia de Produção (PUC Minas 2017), Self Driving Car Engineering (UDACITY-2018) e mestrado em Informática (PUC Minas 2020)."
-	, "about_content3": "Atualmente, tenho trabalhado e investindo nas áreas de Data Science e desenvolvimento de ferramentas para engenharia. Veja mais informações abaixo."
+	, "about_content1": "Sou formado em Engenharia de Computação (CEFET-MG 2012), com mestrado em Informática (PUC Minas 2020), especializações em Engenharia de Produção (PUC Minas 2017) e Engenharia de Carro Autônomo (Self Driving Car Engineering - UDACITY-2018). Sou também técnico em Informática Industrial pelo CEFET-MG (2005)."
+	, "about_content2": "Trabalhei como desenvolvedor full stack desde 2006 para ambientes web e desktop. Trabalhei em grandes projetos nas áreas de contabilidade, de educação e finanças. As linguagens no qual tenho maior experiência são ASP.NET C#, PHP e Python, para banco de dados relacionais. Desde 2018 também trabalho com desenvolvimento de aplicações de Visão Computacional, usando redes neurais artificiais para segmentação de imagens e detecção de objetos/pessoas."
+	, "about_content3": "Recentemente tenho atuado como professor nas disciplinas de Inteligência Artificial, Pesquisa Operacional, Matemática Computacional, Matemática Discreta, Aprendizado de Máquina e Metaheurísticas. Veja mais informações abaixo."
 	, "about_prof_title": "LinkedIn"
 	, "about_prof_content": "Veja meu currículo completo no Linkedin."
 	, "about_curr_title": "Currículo Completo"
@@ -19,11 +19,11 @@
 	, "about_github_content": "Veja meus projetos livres no Github."
 	, "services_title": "O que eu faço?"
 	, "serv_develop_title": "Desenvolvimento de Software"
-	, "serv_develop_content": "Desenvolvimento de sistemas, aplicativos e páginas web. Modelagem, construção e mineração de banco de dados."
+	, "serv_develop_content": "Desenvolvimento de sistemas e páginas web. Modelagem, construção e mineração de banco de dados."
 	, "serv_consult_title": "Consultoria e Soluções em TI"
 	, "serv_consult_content": "Consultoria no desenvolvimento e implantação de software. Gerência de configuração para nuvens Amazon e Google."
 	, "serv_research_title": "Pesquisa e Desenvolvimento"
-	, "serv_research_content": "Solução de problemas inovadores, originais e complexos. Todas as etapas no desenvolvimento de novos produtos e métodos."
+	, "serv_research_content": "Solução de problemas inovadores nas áreas de Visão Computacional. Todas as etapas no desenvolvimento de novos produtos e métodos."
 	, "methods_title": "O que eu uso?"
 	, "methods_os_title": "Tecnologias Open Source"
 	, "methods_os_content": "Soluções utilizando ferramentas em código aberto."
