Atualização de site

--- a/lang/lang_pt.txt
+++ b/lang/lang_pt.txt
@@ -3,9 +3,9 @@
 	, "subtitle1": "Engenheiro de Computação. Mestre em Informática. Especialista em Engenharia de Produção."
 	, "subtitle2": "Acredito que construir novas coisas é muito mais divertido que comprá-las. E que soluções simples e leves podem produzir grandes inovações."
 	, "about_title": "Sobre"	
-	, "about_content1": "Sou formado em Engenharia de Computação (CEFET-MG 2012), com mestrado em Informática (PUC Minas 2020), especializações em Engenharia de Produção (PUC Minas 2017) e Engenharia de Carro Autônomo (Self Driving Car Engineering - UDACITY-2018). Sou também técnico em Informática Industrial pelo CEFET-MG (2005)."
-	, "about_content2": "Trabalhei como desenvolvedor full stack desde 2006 para ambientes web e desktop. Trabalhei em grandes projetos nas áreas de contabilidade, de educação e finanças. As linguagens no qual tenho maior experiência são ASP.NET C#, PHP e Python, para banco de dados relacionais. Desde 2018 também trabalho com desenvolvimento de aplicações de Visão Computacional, usando redes neurais artificiais para segmentação de imagens e detecção de objetos/pessoas."
-	, "about_content3": "Recentemente tenho atuado como professor nas disciplinas de Inteligência Artificial, Pesquisa Operacional, Matemática Computacional, Matemática Discreta, Aprendizado de Máquina e Metaheurísticas. Veja mais informações abaixo."
+	, "about_content1": "Sou formado em Engenharia de Computação (CEFET-MG 2012), com mestrado em Informática (PUC Minas 2020), especializações em Engenharia de Produção (PUC Minas 2017) e Engenharia de Carro Autônomo (Self Driving Car Engineering - UDACITY-2018)."
+	, "about_content2": "Sou desenvolvedor full stack desde 2006 para ambientes web e desktop. Trabalhei em grandes projetos nas áreas de contabilidade, de educação e finanças. As linguagens no qual tenho maior experiência são ASP.NET C#, PHP e Python. Desde 2018 também trabalho com desenvolvimento de aplicações de Visão Computacional, usando redes neurais artificiais."
+	, "about_content3": "Veja mais informações abaixo.."
 	, "about_prof_title": "LinkedIn"
 	, "about_prof_content": "Veja meu currículo completo no Linkedin."
 	, "about_curr_title": "Currículo Completo"
