Atualizaçao do site

--- a/lang/lang_en.txt
+++ b/lang/lang_en.txt
@@ -20,8 +20,8 @@
 	, "services_title": "What can I do?"
 	, "serv_develop_title": "Software Development"
 	, "serv_develop_content": "Development of systems, apps and web pages. Data modeling and mining."
-	, "serv_consult_title": "Consulting and IT Solutions"
-	, "serv_consult_content": "Consulting and IT solutions in software developments. Configuration managements for Amazon AWS and Google Cloud."
+	, "serv_consult_title": "Artificial Intelligence and Optimization"
+	, "serv_consult_content": "Development of Artificial Intelligence solutions, using Machine Learning and Computer Vision."
 	, "serv_research_title": "P&D"
 	, "serv_research_content": "Development of solutions to complex, new and original problems. All development phases of new products and methods."
 	, "methods_title": "What do I use?"
