--- a/lang/lang_pt.txt
+++ b/lang/lang_pt.txt
@@ -20,10 +20,10 @@
 	, "services_title": "O que eu faço?"
 	, "serv_develop_title": "Desenvolvimento de Software"
 	, "serv_develop_content": "Desenvolvimento de sistemas e páginas web. Modelagem, construção e mineração de banco de dados."
-	, "serv_consult_title": "Consultoria e Soluções em TI"
-	, "serv_consult_content": "Consultoria no desenvolvimento e implantação de software. Gerência de configuração para nuvens Amazon e Google."
+	, "serv_consult_title": "Otimização e Inteligência Artificial"
+	, "serv_consult_content": "Desenvolvimento de soluções em Inteligência Artificial, usando Aprendizado de Máquinas e Visão Computacional."
 	, "serv_research_title": "Pesquisa e Desenvolvimento"
-	, "serv_research_content": "Solução de problemas inovadores nas áreas de Visão Computacional. Todas as etapas no desenvolvimento de novos produtos e métodos."
+	, "serv_research_content": "Solução de problemas inovadores na área de Inteligência Artificial. Desenvolvimento de novos produtos e métodos."
 	, "methods_title": "O que eu uso?"
 	, "methods_os_title": "Tecnologias Open Source"
 	, "methods_os_content": "Soluções utilizando ferramentas em código aberto."
