Atualizaçao de site

--- a/lang/lang_en.txt
+++ b/lang/lang_en.txt
@@ -5,8 +5,8 @@
 	, "about_title": "My bio"
 	, "about_content1": "I'm a Computer Engineer (CEFET-MG 2012) with a long-term graduate course in Industrial Engineering (PUC Minas 2017), a Udacity's Self Driving Car Engineering Nanodegree specialization (UDACITY-2018) and a Masters in Informatics (PUC Minas 2020)."
 	, "about_content2": "I'm a full stack software developer since 2006 for web and desktop environments. I've worked with great and important projects in accountant, educational and finance areas. I've experience most in ASP.NET C#, PHP and Java technologies, for relational databases."
-	, "about_content3": "See more informations below.."
-	, "about_prof_title": "Work"
+	, "about_content3": ""
+	, "about_prof_title": "LinkedIn"
 	, "about_prof_content": "View my work profile on Linkedin."
 	, "about_curr_title": "Curriculum Vitae"
 	, "about_curr_content": "Download my resumé in PDF format."
